<resources>
    <string name="app_name">Podax</string>
    <string name="app_long_name">Podax Podcaster</string>
    <string name="app_version">8.0</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="remove_from_playlist">Remove From Playlist</string>
    <string name="search_hint">Search within Podax</string>
    <string name="preferences">Preferences</string>
    <string name="about_content">
<![CDATA[

		<p>Podax was created by Dan Goldstein.
			You can email me at <a href="mailto:dan@axelby.com">dan@axelby.com</a> with any comments or questions you have.
		</p>
		<p>Podax is open source software. You can get the source code at
			<a href="http://github.com/thasmin/Podax">http://github.com/thasmin/Podax</a>.
			It is available under the Apache 2.0 license.
		</p>
		<p>Special thanks to everyone who\'s helped on Github and by sending me email.</p>

		<h3>Changelog</h3>
		<p><strong>Version 8</strong></p>
		<p>
            - New design<br>
            - Everything else is new too
        </p>

		<h3>Open Source Licenses</h3>

        <h4><a href="http://www.mpg123.de/">libmpg123</a></h4>
        <p>Copyright © 1995-2013 by Michael Hipp and others, free software under the terms of the <a href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">LGPL v2.1</a></p>
        <hr>

		<h4><a href="http://xiph.org/vorbis/">libtremor - Ogg decoding</a></h4>
		<p>Copyright © 2002, Xiph.org Foundation. Licensed under <a href="http://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a>.</p>
        <hr>

        <p>Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.<br>
            <a href="http://acra.ch">ACRA</a><br>
            <a href="http://www.shredzone.org/projects/flattr4j">Flattr4j</a><br>
            <a href="https://code.google.com/li/google-gson/">GSON</a><br>
            <a href="https://code.google.com/li/guava-libraries/">Guava</a><br>
            <a href="https://android.googlesource.com/platform/frameworks/volley">Volley</a><br>
            <a href="https://square.github.io/retrofit/">Retrofit</a><br>
            <a href="http://square.github.io/okhttp/">OKHttp</a><br>
        </p>

        <h4><a href="https://code.google.com/p/jsr-305/">JSR 305</a></h4>
        <p>Copyright © 2014, Google. Licensed under <a href="http://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</a>.</p>
        <hr>

        <h4><a href="http://fontawesome.io/">Font Awesome by Dave Gandy</a></h4>
        <p>Licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a>.</p>

        <h3>Copyright</h3>
        <p>Copyright 2015 Dan Goldstein</p>

<p>Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at</p>

   <p><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>

<p>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</p>

    ]]>
    </string>
    <string name="add_rss_feed">Add RSS feed</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="rss_not_valid">RSS not valid</string>
    <string name="go_to_details">Go To Details</string>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="skip_to_end">Skip To End</string>
    <string name="thumbnail">thumbnail</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="update_request_no_wifi">Podax will not update because there is no Wi-Fi connection. This can be changed in the preferences.</string>
    <string name="no_episodes_in_playlist">There are no episodes in the playlist.</string>
    <string name="add">Add</string>
    <string name="restart">Restart</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription_thumbnail">subscription thumbnail</string>
    <string name="download">Download</string>
    <string name="pref_update_wifi">Only update subscriptions or download episodes while connected to a Wi-Fi network.</string>
    <string name="pref_update_wifi_title">Wi-Fi Only</string>
    <string name="pref_max_num_episodes">Maximum number of downloaded episodes in playlist.</string>
    <string name="pref_max_num_episodes_title">Limit Number of Downloaded Episodes</string>
    <string-array name="pref_max_num_episodes_entries">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="pref_max_num_episodes_values">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>10000</item>
    </string-array>
    <string name="pref_crash_reports">Send error reports to the developers if Podax crashes.</string>
    <string name="pref_crash_reports_title">Send Crash Reports</string>
    <string name="payment">Payment</string>
    <string name="donate">Donate</string>
    <string name="flattr">Flattr</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="gpodder_authenticator_activity_title">GPodder Account</string>
    <string name="gpodder">GPodder</string>
    <string name="podcasts">Podcasts</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="subscription">Subscription</string>
    <string name="username">Username</string>
    <string name="episode_picture">episode picture</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="gpodder_sync">gpodder.net Sync</string>
    <string name="pref_sdcard">SD Card for podcast storage</string>
    <string name="pref_sdcard_title">SD Card</string>
    <string-array name="pref_sdcard_values">
        <item>/storage/emulated/0</item>
        <item>/storage/extSdCard</item>
        <item>/mnt/shared/sdcard0</item>
    </string-array>
    <string-array name="pref_sdcard_entries">
        <item>Internal Storage</item>
        <item>External SD Card</item>
        <item>GenyMotion Shared sdcard0</item>
    </string-array>
    <string-array name="gpodder_device_types">
        <item>desktop</item>
        <item>laptop</item>
        <item>mobile</item>
        <item>server</item>
        <item>other</item>
    </string-array>
    <string name="crash_toast_text">Oops, Podax has crashed. Sorry about that!</string>
    <string name="crash_dialog_text">Sorry about that crash earlier. Would you like to report the crash to the developer?</string>
    <string name="crash_comment_prompt">What was happening before the crash?</string>
    <string name="crash_dialog_ok_text">Thanks for sending in the report and helping to make Podax better.</string>
    <string name="playlist_empty">Playlist is empty</string>
    <string name="view_website">View Website</string>
    <string name="remove">Remove</string>
    <string name="device_name">Device Name</string>
    <string name="device_type">Device Type</string>
    <string name="desktop">desktop</string>
    <string name="laptop">laptop</string>
    <string name="mobile">mobile</string>
    <string name="server">server</string>
    <string name="other">other</string>
    <string name="gpodder_account_settings">GPodder Account Settings</string>
    <string name="gpodder_sync_error">Error connecting to gpodder.net</string>
    <string name="gpodder_sync_cannot_authenticate">Cannot authenticate: %1$s</string>
    <string name="gpodder_sync_error_configuration">Cannot change device name and type: %1$s</string>
    <string name="gpodder_sync_send_episodes">Cannot update episodes: %1$s</string>
    <string name="gpodder_sync_retrieve_episodes">Cannot retrieve episodes: %1$s</string>
    <string name="gpodder_sync_retrieve_all_episodes">Cannot retrieve all episodes: %1$s</string>
    <string name="gpodder_sync_update_episode_positions">Cannot send episode positions: %1$s</string>
    <string name="gpodder_sync_retrieve_episode_positions">Cannot retrieve episode positions: %1$s</string>
    <string name="gpodder_sync_timeout">gpodder.net sync timed out</string>
    <string name="pref_playbackrate_title">Playback Rate</string>
    <string name="pref_playbackrate">How fast the episode should play</string>
    <string-array name="pref_playbackrate_entries">
        <item>1.0x</item>
        <item>1.1x</item>
        <item>1.25x</item>
        <item>1.5x</item>
        <item>2.0x</item>
    </string-array>
    <string-array name="pref_playbackrate_values">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.25</item>
        <item>1.5</item>
        <item>2.0</item>
    </string-array>
    <string-array name="sleepytimeTimes">
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
        <item>11 PM</item>
        <item>12 AM</item>
        <item>1 AM</item>
        <item>2 AM</item>
        <item>3 AM</item>
        <item>4 AM</item>
    </string-array>
    <string name="stats">Stats</string>
    <string name="episodes_finished">Episodes Finished</string>
    <string name="time_spent_listening">Time Spent Listening</string>
    <plurals name="years">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="hours">hours</string>
    <string name="no_thanks">No Thanks</string>
    <string name="use_name_from_feed">Use name from feed</string>
    <string name="new_episodes">New Episodes</string>
    <string name="add_new_episodes_to_playlist">Add new episodes to playlist</string>
    <string name="do_not_add_new_episodes_to_playlist">Do not add new episodes to playlist</string>
    <string name="automatic_delete">Automatic Delete</string>
    <string name="only_after_ive_listened_to_it">Only after I\'ve listened to it</string>
    <string name="after_7_days">After 7 days</string>
    <string name="after_14_days">After 14 days</string>
    <string name="find_a_podcast">Find a Podcast from iTunes Toplists</string>
    <string name="subscribe_on_web">Subscribe on the Web</string>
    <string name="search_results">Search Results</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="episodes">Episodes</string>
    <string name="no_subscription_matches">No subscriptions match this search.</string>
    <string name="no_episode_matches">No episodes match this search.</string>
    <string name="extra">Extra</string>
    <string name="last_weeks_stats">Last week\'s stats</string>
    <string name="automatically_added_episodes">Automatically added episodes</string>
    <string name="listen_hours">Listen hours</string>
    <string name="check_means_new_episode_are_added_to_playlist">check means new episode are added to playlist</string>
    <string name="no_subscriptions">no_subscriptions</string>
    <string name="are_you_sure_you_want_to_unsubscribe_this_action_cannot_be_undone">Are you sure you want to unsubscribe? This action cannot be undone.</string>
</resources>