<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text">

        <requestFocus/>
    </EditText>

    <CheckBox
        android:id="@+id/nameAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_name_from_feed"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="@color/podaxColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_episodes"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RadioGroup
        android:id="@+id/autoPlaylistGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/autoPlaylistYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add_new_episodes_to_playlist"/>

        <RadioButton
            android:id="@+id/autoPlaylistNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_add_new_episodes_to_playlist"/>
    </RadioGroup>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_margin="2dp"
        android:background="@color/podaxColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automatic_delete"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RadioGroup
        android:id="@+id/expireGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/expire0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/only_after_ive_listened_to_it"/>

        <RadioButton
            android:id="@+id/expire7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_7_days"/>

        <RadioButton
            android:id="@+id/expire14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_14_days"/>
    </RadioGroup>

</LinearLayout>