<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
<LinearLayout android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingLeft="20dip"
              android:paddingRight="20dip"
              android:paddingTop="5dip">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/gpodder_authenticator_activity_title"
            style="@android:style/TextAppearance.Large"
            android:drawableStart="@drawable/mygpo"
            android:drawablePadding="10dp"
            android:textIsSelectable="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:labelFor="@+id/username" />

    <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/password"
            android:labelFor="@+id/password" />

    <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/device_name"
            android:labelFor="@+id/devicename" />

    <EditText
            android:id="@+id/devicename"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="podax"
            android:inputType="textShortMessage"
            android:maxLines="1"
            tools:ignore="HardcodedText"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/device_type" />

    <RadioGroup
            android:id="@+id/devicetype"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desktop"
                android:id="@+id/radioDesktop"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laptop"
                android:id="@+id/radioLaptop"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:id="@+id/radioMobile"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server"
                android:id="@+id/radioServer"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:id="@+id/radioOther"/>
    </RadioGroup>

    <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"/>

    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"/>

</LinearLayout>
</ScrollView>