<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/search_results"
            android:textSize="24sp"
            android:textColor="@color/orange500"
            />

        <EditText
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <View android:layout_width="match_parent"
              android:layout_height="2dp"
              android:background="?attr/colorPrimary"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscriptions"
            android:textAllCaps="true"/>
        <GridLayout
            android:id="@+id/subscription_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="3"
            android:rowCount="1"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/subscription_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:gravity="center_horizontal"
            android:text="@string/no_subscription_matches"
            android:textSize="20sp"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episodes"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:id="@+id/episode_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/episode_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:gravity="center_horizontal"
            android:text="@string/no_episode_matches"
            android:textSize="20sp"
            android:visibility="gone"
            />

    </LinearLayout>
</ScrollView>
