<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.axelby.podax.ui.AddSubscriptionFrame
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:headerIcon="@drawable/ic_asbox_rss">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_rss_feed"
                android:id="@+id/add_rss_text"
                android:textAllCaps="true"
                android:labelFor="@+id/rssurl"
            />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rssurl"
                android:inputType="textUri"
            />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add"
                android:id="@+id/add_rss"
                style="@style/Widget.Podax.Button.Card"
            />

        </com.axelby.podax.ui.AddSubscriptionFrame>

        <com.axelby.podax.ui.AddSubscriptionFrame
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:headerIcon="@drawable/ic_asbox_globe">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/subscribe_on_web"
                android:id="@+id/web_subscribe"
                style="@style/Widget.Podax.Button.Card"
                />

        </com.axelby.podax.ui.AddSubscriptionFrame>

        <com.axelby.podax.ui.AddSubscriptionFrame
            android:id="@+id/toplists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:headerIcon="@drawable/ic_asbox_trendup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_a_podcast"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView2"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#FF000000"
                tools:ignore="PxUsage" />

        </com.axelby.podax.ui.AddSubscriptionFrame>

    </LinearLayout>
</ScrollView>
